fix: Code copy button not showing and extra margin

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -25,5 +25,5 @@ summary {
 }
 
 .expressive-code .frame {
-  all: unset !important;
+  margin: 0 !important;
 }
